<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include_appbar"
        layout="@layout/include_appbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/include_appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Image -->
            <ImageView
                android:id="@+id/imgCar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:src="@drawable/img_demo_car" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/margin_share_button_top"
                android:layout_marginRight="@dimen/big"
                android:src="@drawable/img_share"
                fab:fab_colorNormal="@color/color_fab_color"
                fab:fab_colorPressed="@color/color_fab_color" />

            <!-- Price & Rating -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big"
                android:layout_marginRight="@dimen/big">

                <TextView
                    android:id="@+id/lblPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/demo_price"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_sub_details"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/smaller" />

            </LinearLayout>

            <!-- Name and Description -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/big"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblCarName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/big"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/demo_car_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_car_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller"
                    android:layout_marginTop="@dimen/smaller"
                    android:text="@string/demo_description"
                    android:textColor="@color/color_gray"
                    android:textSize="@dimen/text_size_description" />
            </LinearLayout>

            <!-- Sub details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smaller"
                android:layout_marginLeft="@dimen/big"
                android:layout_marginRight="@dimen/big">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_brand"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblBrand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_brand"
                        android:textColor="@color/color_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_type"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_type"
                        android:textColor="@color/color_gray" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smaller"
                android:layout_marginLeft="@dimen/big"
                android:layout_marginRight="@dimen/big">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_engine_cc"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblEngineCC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_engine_cc"
                        android:textColor="@color/color_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_mileage"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblMileage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_mileage"
                        android:textColor="@color/color_gray" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smaller"
                android:layout_marginLeft="@dimen/big"
                android:layout_marginRight="@dimen/big">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_abs_exists"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/lblAbsExists"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/demo_abs_exists"
                        android:textColor="@color/color_gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/smallest"
                        android:text="@string/display_color"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/vCarColor"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:background="@color/color_primary" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
