<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/smallest"
        android:layout_marginLeft="@dimen/small"
        android:layout_marginRight="@dimen/small"
        android:layout_marginTop="@dimen/smallest"
        card_view:background="@color/color_card_background"
        card_view:contentPaddingBottom="@dimen/small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/smallest"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_bar_arrow" />

            <ImageView
                android:id="@+id/imgCar"
                android:layout_width="@dimen/width_car_image"
                android:layout_height="@dimen/height_car_image"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/small"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/img_demo_car" />

            <TextView
                android:id="@+id/lblCarName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/imgCar"
                android:layout_marginRight="@dimen/big"
                android:layout_toRightOf="@id/imgCar"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/demo_car_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_car_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblBrandAndType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblCarName"
                android:layout_alignStart="@+id/lblCarName"
                android:layout_below="@id/lblCarName"
                android:layout_marginRight="@dimen/big"
                android:singleLine="true"
                android:text="@string/demo_car_brand_and_type"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_sub_details" />

            <TextView
                android:id="@+id/lblDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblCarName"
                android:layout_alignStart="@+id/lblCarName"
                android:layout_below="@id/lblBrandAndType"
                android:layout_marginBottom="@dimen/smaller"
                android:layout_marginRight="@dimen/big"
                android:layout_marginTop="@dimen/smaller"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/demo_description"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/text_size_description" />

            <TextView
                android:id="@+id/lblPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lblCarName"
                android:layout_alignStart="@+id/lblCarName"
                android:layout_below="@id/lblDescription"
                android:singleLine="true"
                android:text="@string/demo_price"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_sub_details"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lblDescription"
                android:layout_marginLeft="@dimen/smaller"
                android:layout_toRightOf="@id/lblPrice" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>